<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/motion_layout"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_login_scene"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/bottom" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/top" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="240dp"
        android:layout_height="61dp"
        android:layout_marginTop="304dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="147dp"
        android:layout_height="48dp"
        android:clickable="true"
        android:gravity="center"
        android:onClick="signUp"
        android:text="@string/new_user_sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupButton"
        app:layout_constraintVertical_bias="0.183" />

    <Button
        android:id="@+id/signupButton"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="127dp"
        android:layout_height="65dp"
        android:elevation="10dp"
        android:fontFamily="@font/roboto_medium"
        android:onClick="login"
        android:text="@string/log_in"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleSignin"
        app:layout_constraintVertical_bias="0.064" />

    <Button
        android:id="@+id/googleSignin"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="226dp"
        android:layout_height="64dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:paddingStart="70dp"
        android:text="@string/sign_in_with_google"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.668"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editTextTextPassword"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="240dp"
        android:layout_height="61dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/googleSignin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView12"
        app:layout_constraintVertical_bias="0.927" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="36dp"
        android:layout_height="29dp"
        android:contentDescription="@string/google_logo"
        app:layout_constraintBottom_toBottomOf="@+id/googleSignin"
        app:layout_constraintEnd_toEndOf="@+id/googleSignin"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="@+id/googleSignin"
        app:layout_constraintTop_toTopOf="@+id/googleSignin"
        app:srcCompat="@drawable/pngfind_com_google_icon_png_344426" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="156dp"
        android:layout_height="178dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121"
        app:srcCompat="@drawable/simple_logo" />

</androidx.constraintlayout.motion.widget.MotionLayout>